<resources>
    <string name="about">About</string>
    <string name="about_x">About %1$s</string>
    <string name="account">Account</string>
    <string name="activity_feed">Activity Feed</string>
    <string name="add_to_library">Add to Library</string>
    <string name="added_to_library">Added to library</string>
    <string name="admin">Admin</string>
    <string name="age_rating">Age rating</string>
    <string name="age_rating_g">G</string>
    <string name="age_rating_pg">PG</string>
    <string name="age_rating_pg13">PG-13</string>
    <string name="age_rating_r17">R17+</string>
    <string name="age_rating_r18">R18+</string>
    <string name="aired">Aired</string>
    <string name="all">All</string>
    <string name="all_nsfw_content_will_be_shown">All NSFW content will be shown, unobscured, in your feed.</string>
    <string name="alternate_title">Alternate title</string>
    <string name="animation_">Animation…</string>
    <string name="anime">Anime</string>
    <string name="anime_breakdown">Anime Breakdown</string>
    <string name="anime_library">Anime Library</string>
    <string name="anime_library_is_empty">Anime library is empty</string>
    <string name="anime_quotes">Anime quotes</string>
    <string name="anime_quotes_title">Anime Quotes</string>
    <string name="anime_review">Anime Review</string>
    <string name="anime_reviews">Anime reviews</string>
    <string name="anime_reviews_title">Anime Reviews</string>
    <string name="apps">Apps</string>
    <string name="app_news">App News</string>
    <string name="app_written_by">App written by</string>
    <string name="are_you_sure_you_want_to_remove_this_from_your_library">Are you sure you want to remove this from your library?</string>
    <string name="as_x">as %1$s</string>
    <string name="atsuka_drawn_by">Atsuka drawn by</string>
    <string name="auto">Auto</string>
    <string name="back">Back</string>
    <string name="bio">Bio</string>
    <string name="bio_for_x">Bio for %1$s</string>
    <string name="breakdown">Breakdown</string>
    <string name="cancel">Cancel</string>
    <string name="canonical">Canonical</string>
    <string name="canonical_title">Canonical title</string>
    <string name="casting">Casting</string>
    <string name="castings">Castings</string>
    <plurals name="chapters">
        <item quantity="one">Chapter</item>
        <item quantity="other">Chapters</item>
    </plurals>
    <string name="chapters_read">Chapters Read</string>
    <string name="characters">Characters</string>
    <string name="characters_">Characters…</string>
    <string name="charles_madere">Charles Madere</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close drawer</string>
    <string name="community">Community</string>
    <string name="community_rating">Community rating</string>
    <string name="community_rating_x">Community rating %1$s</string>
    <string name="completed">Completed</string>
    <string name="completed_library_is_empty">Completed library is empty</string>
    <string name="contact">Contact</string>
    <string name="credits">Credits</string>
    <string name="currently_airing">Currently Airing</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="currently_reading_library_is_empty">Currently reading library is empty</string>
    <string name="currently_watching">Currently Watching</string>
    <string name="currently_watching_library_is_empty">Currently watching library is empty</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="daily">Daily</string>
    <string name="decrease">Decrease</string>
    <string name="default_launch_screen">Default launch screen</string>
    <string name="default_library_sorting">Default library sorting</string>
    <string name="deep_link_error">Sorry, but a deep link error occurred!</string>
    <string name="delete">Delete</string>
    <string name="delimiter">,\u0020</string>
    <string name="details">Details</string>
    <string name="dropped">Dropped</string>
    <string name="dropped_library_is_empty">Dropped library is empty</string>
    <string name="edit">Edit</string>
    <string name="edit_in_library">Edit in Library</string>
    <string name="email">Email</string>
    <string name="english">English</string>
    <string name="english_title">English title</string>
    <string name="enjoyment_">Enjoyment…</string>
    <string name="enter_your_username_not_your_email">Enter your username, not your email.</string>
    <plurals name="episodes">
        <item quantity="one">Episode</item>
        <item quantity="other">Episodes</item>
    </plurals>
    <string name="episode_length">Episode length</string>
    <string name="error_adding_library_entry">Error adding library entry! Please check your network connection and try again.</string>
    <string name="error_deleting_library_entry">Error deleting library entry! Please check your network connection and try again.</string>
    <string name="error_editing_library_entry">Error editing library entry! Please check your network connection and try again.</string>
    <string name="error_loading_anime">Error loading anime! Please check your network connection and try again.</string>
    <string name="error_loading_anime_library">Error loading anime library</string>
    <string name="error_loading_anime_quotes">Error loading anime quotes</string>
    <string name="error_loading_anime_review">Error loading anime review</string>
    <string name="error_loading_anime_reviews">Error loading anime reviews</string>
    <string name="error_loading_app_news">Error loading app news</string>
    <string name="error_loading_comments">Error loading comments</string>
    <string name="error_loading_completed_library">Error loading completed library</string>
    <string name="error_loading_currently_reading_library">Error loading currently reading library</string>
    <string name="error_loading_currently_watching_library">Error loading currently watching library</string>
    <string name="error_loading_dropped_library">Error loading dropped library</string>
    <string name="error_loading_favorites">Error loading favorites</string>
    <string name="error_loading_feed">Error loading feed</string>
    <string name="error_loading_followers_list">Error loading followers list</string>
    <string name="error_loading_following_list">Error loading following list</string>
    <string name="error_loading_franchise">Error loading franchise</string>
    <string name="error_loading_group">Error loading group! Please check your network connection and try again.</string>
    <string name="error_loading_group_members">Error loading group members</string>
    <string name="error_loading_groups">Error loading groups</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="error_loading_manga">Error loading manga! Please check your network connection and try again.</string>
    <string name="error_loading_notifications">Error loading notifications</string>
    <string name="error_loading_on_hold_library">Error loading on hold library</string>
    <string name="error_loading_plan_to_read_library">Error loading plan to read library</string>
    <string name="error_loading_plan_to_watch_library">Error loading plan to watch library</string>
    <string name="error_loading_reviews">Error loading reviews</string>
    <string name="error_loading_search_results">Error loading search results</string>
    <string name="error_loading_story">Error loading story</string>
    <string name="error_loading_timeline">Error loading timeline</string>
    <string name="error_loading_user">Error loading user</string>
    <string name="error_loading_user_check_network_connection">Error loading user! Please check your network connection and try again.</string>
    <string name="error_loading_your_profile_check_network_connection">Error loading your profile! Please check your network connection and try again.</string>
    <string name="error_logging_in_generic">Error logging in! Please check your login credentials, network connection, and then try again.</string>
    <string name="error_logging_in_server">Encountered a server error when logging in! Please try again.</string>
    <string name="error_posting_comment">Error posting comment! Please check your network connection and try again.</string>
    <string name="error_posting_to_feed">Error posting to feed! Please check your network connection and try again.</string>
    <string name="error_refreshing_group">Error refreshing group! Please check your network connection and try again.</string>
    <string name="error_refreshing_user">Error refreshing user! Please check your network connection and try again.</string>
    <string name="error_retrieving_client_configuration">Error retrieving client configuration from Hummingbird! Please check your network connection and try again.</string>
    <string name="explore">Explore</string>
    <string name="explore_anime">Explore Anime</string>
    <string name="explore_manga">Explore Manga</string>
    <string name="every_eight_hours">Every 8 hours</string>
    <string name="every_four_hours">Every 4 hours</string>
    <string name="every_three_days">Every 3 days</string>
    <string name="favorite_anime">Favorite Anime</string>
    <string name="favorite_manga">Favorite Manga</string>
    <string name="favorites">Favorites</string>
    <string name="feed">Feed</string>
    <string name="filter">Filter</string>
    <string name="finished_airing">Finished airing</string>
    <string name="finished_airing_x">Finished airing %1$s</string>
    <string name="follow">Follow</string>
    <plurals name="followers">
        <item quantity="one">Follower</item>
        <item quantity="other">Followers</item>
    </plurals>
    <string name="followers_of_x">Followers of %1$s</string>
    <string name="following">Following</string>
    <string name="following_no_one">Following no one</string>
    <string name="following_x">Following %1$s</string>
    <string name="forums">Forums</string>
    <string name="franchise">Franchise</string>
    <string name="gallery">Gallery</string>
    <string name="general">General</string>
    <string name="genre">Genre</string>
    <plurals name="genres">
        <item quantity="one">Genre</item>
        <item quantity="other">Genres</item>
    </plurals>
    <string name="get_hummingbird">Get Hummingbird</string>
    <string name="hummingbird">Hummingbird</string>
    <string name="hummingbird_on_the_web">Hummingbird on the Web</string>
    <string name="log_viewer">Log Viewer</string>
    <string name="manga_library">Manga Library</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="nsfw_">NSFW?</string>
    <string name="password">Password</string>
    <string name="post">Post</string>
    <string name="priscilla_zhou">Priscilla Zhou</string>
    <string name="pro">Pro</string>
    <string name="project_is_open_source_on_github">Project is open source on GitHub</string>
    <string name="pull_to_refresh_to_check_again">Pull to refresh to check again</string>
    <string name="pull_to_refresh_to_try_again">Pull to refresh to try again</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rewatch_intro_animation">Rewatch intro animation</string>
    <string name="share">Share</string>
    <string name="sign_out">Sign out</string>
    <string name="system">System</string>
    <string name="that_lil_hummingbird">That Li\'l Hummingbird</string>
    <string name="theme">Theme</string>
    <string name="unfollow">Unfollow</string>
    <string name="username">Username</string>
    <string name="user_has_no_groups">User has no groups</string>
    <string name="write_something_">Write something…</string>
</resources>