<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:icon="@drawable/ic_video_library_white_24dp"
        android:id="@+id/miAnimeLibrary"
        android:title="@string/anime_library"
        android:visible="false"
        compat:showAsAction="ifRoom"
        tools:visible="true" />
    <item
        android:icon="@drawable/ic_library_books_white_24dp"
        android:id="@+id/miMangaLibrary"
        android:title="@string/manga_library"
        android:visible="false"
        compat:showAsAction="ifRoom"
        tools:visible="true" />
    <item
        android:icon="@drawable/ic_share_white_24dp"
        android:id="@+id/miShare"
        android:title="@string/share"
        android:visible="false"
        compat:showAsAction="ifRoom"
        tools:visible="true" />
    <item
        android:id="@+id/miFollow"
        android:title="@string/follow"
        android:visible="false"
        compat:showAsAction="never"
        tools:visible="true" />
    <item
        android:id="@+id/miUnfollow"
        android:title="@string/unfollow"
        android:visible="false"
        compat:showAsAction="never"
        tools:visible="true" />
</menu>
