<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DrawerLayout">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/toolbar" />
        <ScrollView
            android:fillViewport="true"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:overScrollMode="never">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    android:layout_marginBottom="@dimen/root_padding"
                    style="@style/ResponsiveWidthCard">
                    <LinearLayout
                        style="@style/ResponsiveWidthCardInternal">
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:text="@string/general"
                            style="@style/ResponsiveWidthCardHeader" />
                        <LinearLayout
                            android:id="@+id/llAnimeTitleLanguage"
                            style="@style/ResponsiveWidthCardItem">
                            <com.charlesmadere.hummingbird.views.TypefaceTextView
                                android:text="@string/preferred_anime_title_language"
                                style="@style/ResponsiveWidthCardItemHeader" />
                            <com.charlesmadere.hummingbird.views.TypefaceTextView
                                android:id="@+id/tvAnimeTitleLanguage"
                                tools:text="@string/english"
                                style="@style/ResponsiveWidthCardItemBody" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llTheme"
                            style="@style/ResponsiveWidthCardItem">
                            <com.charlesmadere.hummingbird.views.TypefaceTextView
                                android:text="@string/theme"
                                style="@style/ResponsiveWidthCardItemHeader" />
                            <com.charlesmadere.hummingbird.views.TypefaceTextView
                                android:id="@+id/tvTheme"
                                tools:text="@string/system"
                                style="@style/ResponsiveWidthCardItemBody" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/llUseChromeCustomTabs"
                            style="@style/ResponsiveWidthCardItem.Switch">
                            <com.charlesmadere.hummingbird.views.TypefaceTextView
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:text="@string/use_chrome_custom_tabs"
                                style="@style/ResponsiveWidthCardItemHeader" />
                            <android.support.v7.widget.SwitchCompat
                                android:id="@+id/scUseChromeCustomTabs"
                                style="@style/Switch" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_marginBottom="@dimen/root_padding"
                    style="@style/ResponsiveWidthCard">
                    <LinearLayout
                        style="@style/ResponsiveWidthCardInternal">
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:text="@string/account"
                            style="@style/ResponsiveWidthCardHeader" />
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:id="@+id/tvSignOut"
                            android:text="@string/sign_out"
                            style="@style/ResponsiveWidthCardItem" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_marginBottom="@dimen/root_padding"
                    style="@style/ResponsiveWidthCard">
                    <LinearLayout
                        style="@style/ResponsiveWidthCardInternal">
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:text="@string/credits"
                            style="@style/ResponsiveWidthCardHeader" />
                        <com.charlesmadere.hummingbird.views.KeyValueTextView
                            android:id="@+id/kvtvAuthor"
                            app:keyText="@string/app_written_by"
                            app:valueText="@string/charles_madere"
                            app:valueTextColor="?attr/colorAccent"
                            style="@style/ResponsiveWidthCardItem" />
                        <com.charlesmadere.hummingbird.views.KeyValueTextView
                            android:id="@+id/kvtvPriscilla"
                            app:keyText="@string/atsuka_drawn_by"
                            app:valueText="@string/priscilla_zhou"
                            app:valueTextColor="?attr/colorAccent"
                            style="@style/ResponsiveWidthCardItem" />
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:id="@+id/tvGitHub"
                            android:text="@string/project_is_open_source_on_github"
                            style="@style/ResponsiveWidthCardItem" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_marginBottom="@dimen/root_padding"
                    style="@style/ResponsiveWidthCard">
                    <LinearLayout
                        style="@style/ResponsiveWidthCardInternal">
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:text="@string/hummingbird"
                            style="@style/ResponsiveWidthCardHeader" />
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:id="@+id/tvHummingbirdOnTheWeb"
                            android:text="@string/hummingbird_on_the_web"
                            style="@style/ResponsiveWidthCardItem" />
                        <com.charlesmadere.hummingbird.views.KeyValueTextView
                            android:id="@+id/kvtvGetHummingbirdPro"
                            android:visibility="gone"
                            app:keyText="@string/get_hummingbird"
                            app:valueText="@string/pro"
                            app:valueTextColor="?attr/colorAccent"
                            tools:visibility="visible"
                            style="@style/ResponsiveWidthCardItem" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    style="@style/ResponsiveWidthCard">
                    <LinearLayout
                        style="@style/ResponsiveWidthCardInternal">
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:text="@string/miscellaneous"
                            style="@style/ResponsiveWidthCardHeader" />
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:id="@+id/tvRateThisApp"
                            android:text="@string/rate_this_app"
                            style="@style/ResponsiveWidthCardItem" />
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:id="@+id/tvRewatchIntroAnimation"
                            android:text="@string/rewatch_intro_animation"
                            style="@style/ResponsiveWidthCardItem" />
                        <com.charlesmadere.hummingbird.views.TypefaceTextView
                            android:id="@+id/tvLogViewer"
                            android:text="@string/log_viewer"
                            style="@style/ResponsiveWidthCardItem" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <TextView
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:id="@+id/tvVersion"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/root_padding"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/text_small"
                    tools:text="v1.0 (1)" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <include
        layout="@layout/navigation_drawer" />
</android.support.v4.widget.DrawerLayout>
